--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,9 @@
     {% endif %}
 </head>
 <body>
+    <a href="{{ url_for('index') }}">home</a>
+    <a href="{{ url_for('login') }}">login</a>
+    <a href="{{ url_for('signup') }}">signup</a>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
