--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,24 +2,36 @@
 
 {% block content %}
 
+<form action="" method="POST" novalidate>
+
     {{ sform.hidden_tag() }}
+
+    <div>
         {{ sform.username.label }}
         {{ sform.username(size=50) }}
 
         {% for error in sform.username.errors %}
             {{ error }}
         {% endfor %}
+    </div>
 
-
+    <div>
         {{ sform.password.label }}
         {{ sform.password(size=50) }}
 
         {% for error in sform.password.errors %}
             {{ error }}
         {% endfor %}
+    </div>
 
+    <div>
         {{ sform.confirm_password.label }}
         {{ sform.confirm_password(size=50) }}
 
+    </div>
+    
+    <div>
         {{ sform.submit() }}
+    </div>
+</form>
 {% endblock %}
