--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
     <a href="{{ url_for('index') }}">home</a>
     <a href="{{ url_for('login') }}">login</a>
     <a href="{{ url_for('signup') }}">signup</a>
+    <a href="{{ url_for('logout') }}">logout</a>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
