--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{ word }}
+    <form action="" method="POST"enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+            {{ form.file() }}
+            {{ form.submit( )}}
+
+    </form>
+    {% if dataframe %}
+        {{ dataframe|safe}}
+    {% endif %}
 {% endblock %}
