Added file saving feature
user can upload file and it'll automatically save to local uploads folder

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,13 @@
     <form action="" method="POST"enctype="multipart/form-data">
         {{ form.hidden_tag() }}
             {{ form.file() }}
-            {{ form.submit( )}}
-
+            {{ form.submit() }}
     </form>
     {% if dataframe %}
-        {{ dataframe|safe}}
+        {{ dataframe|safe }}
     {% endif %}
+
+    <form action="/add_csv" method="POST">
+        <button type="submit">Save</button>
+    </form>
 {% endblock %}
