--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,701;1,701&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    
     {% if title %}
         <title>{{ title }}</title>
     {% endif %}
+    {% block styles %}{% endblock %}
 </head>
-<body>
-    <a href="{{ url_for('index') }}">home</a>
-    <a href="{{ url_for('login') }}">login</a>
-    <a href="{{ url_for('signup') }}">signup</a>
-    <a href="{{ url_for('logout') }}">logout</a>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                {{ message }}
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+
+<body class="{% block body_class %}{% endblock %}">
+
 
     {% block content %}{% endblock %}
 </body>
