--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,36 +1,61 @@
 {% extends "base.html" %}
 
+{% block styles%}
+    <link rel="stylesheet" href="static/login.css">
+{% endblock %}
+
+{% block body_class %}format{% endblock %}
+
 {% block content %}
 
-<form action="" method="POST" novalidate>
-    {{ form.hidden_tag() }}
+<div id="login-page">
+    <div id="wrapper">
 
-        <div>
-            {{ form.username.label }}
-            {{ form.username(size=50)}}
+        <h1 id="title" align="center">LOG-IN</h1>
+        <form action="" method="POST" novalidate>
+            {{ form.hidden_tag() }}
 
-            {% for error in form.username.errors %}
-                {{ error }}
-            {% endfor %}
-        </div>
+            <div id="flex-login">
 
-        <div>
-            {{ form.password.label }}
-            {{ form.password(size=50) }}
+                <div class="input-container">
 
-            {% for error in form.password.errors %}
-                {{ error }}
-            {% endfor %}
-        </div>
+                    <div class="label">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg>
+                    </div>
+                    {{ form.username(size=50, placeholder="Enter username", class="input-field")}}
 
-        <div>
-            {{ form.remember_me() }}
-            {{ form.remember_me.label }}
-        </div>
+                    {% for error in form.username.errors %}
+                        {{ error }}
+                    {% endfor %}
+                </div>
 
-        <div>
-            {{ form.submit() }}
-        </div>
-</form>
+                <div class="input-container">
+                    <div class="label">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560Zm0-80Zm0 400Z"/></svg>
+                    </div>
 
+                    {{ form.password(size=50, placeholder="Enter password", class="input-field") }}
+
+                    {% for error in form.password.errors %}
+                        {{ error }}
+                    {% endfor %}
+                </div>
+
+                <div>
+                    {{ form.remember_me() }}
+                    {{ form.remember_me.label }}
+                </div>
+
+                <div>
+                    {{ form.submit(class="submit-button") }}
+                </div>
+
+                <div>
+                    Don't have an account? <a href="{{ url_for('signup') }}">Signup</a>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
